k8s/deployment.yaml
# -*- mode: k8s -*-

# https://kubernetes.io/docs/tutorials/stateless-application/expose-external-ip-address/

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blub
spec:
  selector:
    matchLabels:
      name: foo
  replicas: 3
  template:
    metadata:
      labels:
        app: blub-app
        name: foo
    spec:
      containers:
        - name: mi
          image: my-image
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
