k8s/example-ingress.yaml
# https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ~ # hello-world.info
      http:
        paths:
          - path: /blub-app
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 12345
          - path: /secondary-api
            pathType: Prefix
            backend:
              service:
                name: secondary-api
                port:
                  number: 12346
